tests/rustdoc-ui/custom_code_classes_in_docs-warning2.stderr
error: missing class name after `class=`
  --> $DIR/custom_code_classes_in_docs-warning2.rs:9:1
   |
LL | / /// ```{class=}
LL | | /// main;
LL | | /// ```
   | |_______^
   |
note: the lint level is defined here
  --> $DIR/custom_code_classes_in_docs-warning2.rs:5:9
   |
LL | #![deny(warnings)]
   |         ^^^^^^^^
   = note: `#[deny(rustdoc::invalid_codeblock_attributes)]` implied by `#[deny(warnings)]`

error: aborting due to previous error

